--- a/template-01/index.html
+++ b/template-01/index.html
@@ -81,6 +81,21 @@
                     ],
                     "tutorial": ""
                 },
+                "Clash Meta": {
+                    "url": [
+                        {
+                            "name": "GooglePlay",
+                            "url": "https://play.google.com/store/apps/details?id=com.github.metacubex.clash.meta&hl=en&gl=US",
+                            "best": true
+                        },
+                        {
+                            "name": "Github",
+                            "url": "https://github.com/MetaCubeX/ClashMetaForAndroid/releases/download/v2.8.8/cmfa-2.8.8-meta-universal-release.apk",
+                            "best": false
+                        }
+                    ],
+                    "tutorial": ""
+                },
                 "NekoBox": {
                     "url": [
                         {
@@ -104,6 +119,16 @@
                             "name": "",
                             "url": "https://github.com/MatsuriDayo/nekoray/releases/download/3.8/nekoray-3.8-2023-06-14-windows64.zip",
                             "best": true
+                        }
+                    ],
+                    "tutorial": ""
+                },
+                "Clash Verge": {
+                    "url": [
+                        {
+                            "name": "",
+                            "url": "https://github.com/zzzgydi/clash-verge/releases/download/v1.3.6/Clash.Verge_1.3.6_x64-setup.exe",
+                            "best": false
                         }
                     ],
                     "tutorial": ""
